# clash-forge

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  coverage.yml
src/: errors.rs  lib.rs
src/api/: errors.rs  mod.rs  rest_manager.rs
src/api/clans/: mod.rs  models.rs  requests.rs  search.rs
src/api/common/: mod.rs  models.rs  pagination.rs  utils.rs
src/api/goldpass/: models.rs  requests.rs
src/api/labels/: models.rs  requests.rs
src/api/leagues/: models.rs  requests.rs
src/api/locations/: models.rs  requests.rs
src/api/players/: mod.rs  models.rs  requests.rs
tests/: test.rs
tests/api/: clans_search_tests.rs  clans_tests.rs  goldpass_tests.rs  labels_tests.rs  leagues_tests.rs  locations_tests.rs  mod.rs  pagination_tests.rs  players_tests.rs  utils.rs
tests/api/mock_data/goldpass/: 200.json
tests/api/mock_data/labels/: clans.json  players.json
tests/api/mock_data/leagues/: builder_base_league_info_44000034.json  builder_base_leagues.json  capital_league_info_85000010.json  league_info_29000000.json  league_info_29000017.json  league_season_rankings_29000022_2024-12.json  league_seasons_29000021.json  league_seasons_29000022.json  war_league_info_48000011.json
tests/api/mock_data/locations/: capitals_rankings_32000225.json  clans_builder_base_rankings_32000225.json  clans_rankings_32000225.json  location_info_32000225.json  locations.json  players_builder_base_rankings_32000225.json  players_rankings_32000225.json
tests/api/mock_data/players/: 8VURQOYUJ.json  8VURQOYUJ_invalid.json  8VURQOYUJ_valid.json  9QP9LQOJ8.json
(+15 files in other folders)
