[package]
name = "clash-forge"
version = "0.1.0-alpha"
authors = ["Daniil Berezin frungl@proton.me"]
license = "MIT"
description = "Library for interacting with the Clash of Clans API"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
tokio = { version = "1.45", features = ["full"] }
rust_decimal = { version = "1.31", features = ["serde-float"] }

[dev-dependencies]
mockito = "1.7.0"